--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,26 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
+    implementation 'com.google.firebase:firebase-firestore:19.0.2'
+
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    // Hawk
+    implementation 'com.orhanobut:hawk:2.0.1'
+
+    // AhBottomNavigation
+    implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
 }
