--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,12 @@ dependencies {
     // ButterKnife
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    // OkHttp3
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 }
