--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.2.2
 djangorestframework==3.9.4
+django-extensions==2.1.7
 django-phonenumber-field==3.0.1
 easy-thumbnails==2.6
 phonenumberslite==8.10.13
