--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".view.activity.ChatActivity"
-            android:theme="@style/ChatTheme"/>
-        <activity android:name=".view.activity.MainActivity"/>
+        <activity android:name=".view.activity.AddNewEventActivity"></activity>
+        <activity
+            android:name=".view.activity.ChatActivity"
+            android:theme="@style/ChatTheme" />
+        <activity android:name=".view.activity.MainActivity" />
         <activity android:name=".view.activity.ModeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.LoginActivity"></activity>
+        <activity android:name=".view.activity.LoginActivity" />
     </application>
 
 </manifest>
