--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,4 +4,5 @@ django-extensions==2.1.7
 django-heroku==0.3.1
 django-phonenumber-field==3.0.1
 easy-thumbnails==2.6
+gunicorn==19.9.0
 phonenumberslite==8.10.13
